...
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9">

            <ImageView
                android:id="@+id/imageBrand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="false"
                android:contentDescription="@null"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
...
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:enabled="true"
                android:minWidth="230dp"
                android:onClick="onStartTestClick"
                android:text="@string/next"
                android:theme="?primaryButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPrepareSubmit"
            android:layout_width="match_parent"
...
                android:backgroundTint="@color/button_green"
                android:enabled="true"
                android:letterSpacing="0"
                android:minWidth="230dp"
                android:minHeight="65dp"
                android:onClick="onInstructionsClick"
                android:text="@string/submitResult"
                android:textAllCaps="true"
                android:textSize="15sp"
                app:cornerRadius="3dp"
                tools:targetApi="lollipop" />
        </LinearLayout>
    </LinearLayout>
...
