...
    <string name="takePhoto">Take Photo</string>
    <string name="retakePhoto">Retake Photo</string>
    <string name="take_photo_of_result">Take a photo of the result</string>
    <string name="take_photo_meter_result">Take a photo of the measured result on the device</string>
    <string name="enter_measured_value">Enter the measured value</string>

    <string name="sd_on">Press briefly (*sd_on_off*) to turn device on.</string>
    <string name="sd_fill_photo_fill_in">Take a photo of the screen with the measurement and fill in the measurement value.</string>
    <string name="sd_turn_off">Press and hold (*sd_on_off*) (3 sec.) to turn the instrument off.</string>
    <string name="sd_rinse">Rinse the sensor with distilled water (never touch the electrode with anything) and place the protective cap back. Make sure the protective cap is filled with KCL solution.</string>
    <string name="fill_turbidity_tube">Connect the turbidity tubes and fill the tube with the water sample until you cannot see the black circle at the yellow bottom anymore.</string>
    <string name="empty_tube_see_black_circle">Empty the tube with small intervals until you can see the black circle at the yellow bottom again.</string>
    <string name="read_turbidity_on_side_tube">Read out the turbidity on the side of the tube.</string>
...
    <string name="close_the_cell">Close the cell with a lid and place it facing the mark (point) in the left-hand space of the comparator. It acts as a blank.</string>
    <string name="close_one_cell">Close one cell with a lid and place it facing the mark (point) in the left-hand space of the comparator. It acts as a blank.</string>
    <string name="place_sample_left_space">Place the cell with the water sample facing the mark (point) in the left-hand space of the comparator.</string>
    <string name="place_deionized_right_space">Place the cell with the deionized water facing the mark (point) in the right-hand space of the comparator.</string>
    <string name="place_cell_right_space">Place this cell facing the mark (point) in the right-hand space of the comparator.</string>
    <string name="place_second_cell">Place the second cell facing the mark (point) in the right-hand space of the comparator.</string>
    <string name="sd_50_dip_sample_1">Remove protective cap, rinse the electrode with distilled water.</string>
    <string name="sd_50_dip_sample_2">Immerse the instrument into the sample so that the instrument is submersed to the sealing ring level. Stir the sensor gently while it is in the sample.</string>
    <string name="sd_50_dip_sample_3">Press briefly (*sd_on_off*) to freeze / unfreeze the measurement.</string>
    <string name="sd_maintenance"><b>Note</b>: Regularly check the calibration of the device and recalibrate if necessary. For calibration instructions: see the product manual in the box.</string>
    <string name="sd_70_dip_sample_1">Remove protective cap, rinse the sensor with the water sample.</string>
    <string name="sd_70_dip_sample_2">Immerse the instrument into the sample so that the instrument is submersed to the sealing ring level. Press briefly (*sd_on_off*) to freeze / unfreeze the measurement.</string>
    <string name="wait_for_color_reaction">Wait <b>%reactionTime1</b> for complete colour reaction.</string>
...
