<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:background="@android:color/darker_gray"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/fragment_camera_instructionsHeader"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_cameraStartButton"
        android:layout_below="@+id/fragment_camera_instructionsHeader"
        android:layout_margin="@dimen/activity_vertical_margin">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_camera_instructionsLinearLayout">
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_cameraStartButton"
        android:layout_alignParentBottom="true"
        android:text="@string/start"/>
</RelativeLayout>