...
            android:id="@+id/pager_indicator"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/image_pageRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:paddingLeft="12dp"
...
